Source/Managed/ShaderLab/Internal/ShaderLabParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ShaderLab.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace March.ShaderLab.Internal {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class ShaderLabParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, HlslInclude=30, HlslProgram=31, 
		Assign=32, LeftBrace=33, RightBrace=34, StringLiteral=35, BracketLiteral=36, 
		IntegerLiteral=37, FloatLiteral=38, Float=39, Int=40, Color=41, Vector=42, 
		TwoD=43, ThreeD=44, Cube=45, TwoDArray=46, CubeArray=47, On=48, Off=49, 
		Disabled=50, Front=51, Back=52, Zero=53, One=54, SrcColor=55, OneMinusSrcColor=56, 
		SrcAlpha=57, OneMinusSrcAlpha=58, DstAlpha=59, OneMinusDstAlpha=60, DstColor=61, 
		OneMinusDstColor=62, SrcAlphaSaturate=63, Add=64, Sub=65, RevSub=66, Min=67, 
		Max=68, Never=69, Less=70, Equal=71, LEqual=72, Greater=73, NotEqual=74, 
		GEqual=75, Always=76, Keep=77, Replace=78, IncrSat=79, DecrSat=80, Invert=81, 
		IncrWrap=82, DecrWrap=83, Identifier=84, Whitespace=85, Newline=86, BlockComment=87, 
		LineComment=88;
	public const int
		RULE_shader = 0, RULE_shaderDeclaration = 1, RULE_propertiesBlock = 2, 
		RULE_passBlock = 3, RULE_passDeclaration = 4, RULE_attributeDeclaration = 5, 
		RULE_numberLiteralExpression = 6, RULE_vectorLiteralExpression = 7, RULE_textureLiteralExpression = 8, 
		RULE_propertyDefaultValueExpression = 9, RULE_propertyTypeDeclaration = 10, 
		RULE_propertyDeclaration = 11, RULE_nameDeclaration = 12, RULE_renderStateDeclaration = 13, 
		RULE_tagsBlock = 14, RULE_tagDeclaration = 15, RULE_cullDeclaration = 16, 
		RULE_zTestDeclaration = 17, RULE_zWriteDeclaration = 18, RULE_blendDeclaration = 19, 
		RULE_blendOpDeclaration = 20, RULE_colorMaskDeclaration = 21, RULE_stencilBlock = 22, 
		RULE_stencilDeclaration = 23, RULE_stencilRefDeclaration = 24, RULE_stencilReadMaskDeclaration = 25, 
		RULE_stencilWriteMaskDeclaration = 26, RULE_stencilCompDeclaration = 27, 
		RULE_stencilPassDeclaration = 28, RULE_stencilFailDeclaration = 29, RULE_stencilZFailDeclaration = 30, 
		RULE_stencilCompFrontDeclaration = 31, RULE_stencilPassFrontDeclaration = 32, 
		RULE_stencilFailFrontDeclaration = 33, RULE_stencilZFailFrontDeclaration = 34, 
		RULE_stencilCompBackDeclaration = 35, RULE_stencilPassBackDeclaration = 36, 
		RULE_stencilFailBackDeclaration = 37, RULE_stencilZFailBackDeclaration = 38, 
		RULE_hlslIncludeDeclaration = 39, RULE_hlslProgramDeclaration = 40, RULE_cullModeValue = 41, 
		RULE_blendFactorValue = 42, RULE_blendFactorValueOrBracketLiteral = 43, 
		RULE_blendOpValue = 44, RULE_blendOpValueOrBracketLiteral = 45, RULE_compareFuncValue = 46, 
		RULE_stencilOpValue = 47;
	public static readonly string[] ruleNames = {
		"shader", "shaderDeclaration", "propertiesBlock", "passBlock", "passDeclaration", 
		"attributeDeclaration", "numberLiteralExpression", "vectorLiteralExpression", 
		"textureLiteralExpression", "propertyDefaultValueExpression", "propertyTypeDeclaration", 
		"propertyDeclaration", "nameDeclaration", "renderStateDeclaration", "tagsBlock", 
		"tagDeclaration", "cullDeclaration", "zTestDeclaration", "zWriteDeclaration", 
		"blendDeclaration", "blendOpDeclaration", "colorMaskDeclaration", "stencilBlock", 
		"stencilDeclaration", "stencilRefDeclaration", "stencilReadMaskDeclaration", 
		"stencilWriteMaskDeclaration", "stencilCompDeclaration", "stencilPassDeclaration", 
		"stencilFailDeclaration", "stencilZFailDeclaration", "stencilCompFrontDeclaration", 
		"stencilPassFrontDeclaration", "stencilFailFrontDeclaration", "stencilZFailFrontDeclaration", 
		"stencilCompBackDeclaration", "stencilPassBackDeclaration", "stencilFailBackDeclaration", 
		"stencilZFailBackDeclaration", "hlslIncludeDeclaration", "hlslProgramDeclaration", 
		"cullModeValue", "blendFactorValue", "blendFactorValueOrBracketLiteral", 
		"blendOpValue", "blendOpValueOrBracketLiteral", "compareFuncValue", "stencilOpValue"
	};

	private static readonly string[] _LiteralNames = {
		null, "'Shader'", "'Properties'", "'Pass'", "'('", "','", "')'", "'Name'", 
		"'Tags'", "'Cull'", "'ZTest'", "'ZWrite'", "'Blend'", "'BlendOp'", "'ColorMask'", 
		"'Stencil'", "'Ref'", "'ReadMask'", "'WriteMask'", "'Comp'", "'Fail'", 
		"'ZFail'", "'CompFront'", "'PassFront'", "'FailFront'", "'ZFailFront'", 
		"'CompBack'", "'PassBack'", "'FailBack'", "'ZFailBack'", null, null, "'='", 
		"'{'", "'}'", null, null, null, null, "'Float'", "'Int'", "'Color'", "'Vector'", 
		"'2D'", "'3D'", "'Cube'", "'2DArray'", "'CubeArray'", "'On'", "'Off'", 
		"'Disabled'", "'Front'", "'Back'", "'Zero'", "'One'", "'SrcColor'", "'OneMinusSrcColor'", 
		"'SrcAlpha'", "'OneMinusSrcAlpha'", "'DstAlpha'", "'OneMinusDstAlpha'", 
		"'DstColor'", "'OneMinusDstColor'", "'SrcAlphaSaturate'", "'Add'", "'Sub'", 
		"'RevSub'", "'Min'", "'Max'", "'Never'", "'Less'", "'Equal'", "'LEqual'", 
		"'Greater'", "'NotEqual'", "'GEqual'", "'Always'", "'Keep'", "'Replace'", 
		"'IncrSat'", "'DecrSat'", "'Invert'", "'IncrWrap'", "'DecrWrap'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "HlslInclude", "HlslProgram", "Assign", 
		"LeftBrace", "RightBrace", "StringLiteral", "BracketLiteral", "IntegerLiteral", 
		"FloatLiteral", "Float", "Int", "Color", "Vector", "TwoD", "ThreeD", "Cube", 
		"TwoDArray", "CubeArray", "On", "Off", "Disabled", "Front", "Back", "Zero", 
		"One", "SrcColor", "OneMinusSrcColor", "SrcAlpha", "OneMinusSrcAlpha", 
		"DstAlpha", "OneMinusDstAlpha", "DstColor", "OneMinusDstColor", "SrcAlphaSaturate", 
		"Add", "Sub", "RevSub", "Min", "Max", "Never", "Less", "Equal", "LEqual", 
		"Greater", "NotEqual", "GEqual", "Always", "Keep", "Replace", "IncrSat", 
		"DecrSat", "Invert", "IncrWrap", "DecrWrap", "Identifier", "Whitespace", 
		"Newline", "BlockComment", "LineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ShaderLab.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ShaderLabParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ShaderLabParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ShaderLabParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ShaderContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringLiteral() { return GetToken(ShaderLabParser.StringLiteral, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftBrace() { return GetToken(ShaderLabParser.LeftBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightBrace() { return GetToken(ShaderLabParser.RightBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ShaderLabParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ShaderDeclarationContext[] shaderDeclaration() {
			return GetRuleContexts<ShaderDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShaderDeclarationContext shaderDeclaration(int i) {
			return GetRuleContext<ShaderDeclarationContext>(i);
		}
		public ShaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shader; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShader(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderContext shader() {
		ShaderContext _localctx = new ShaderContext(Context, State);
		EnterRule(_localctx, 0, RULE_shader);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			Match(T__0);
			State = 97;
			Match(StringLiteral);
			State = 98;
			Match(LeftBrace);
			State = 102;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1073807116L) != 0)) {
				{
				{
				State = 99;
				shaderDeclaration();
				}
				}
				State = 104;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 105;
			Match(RightBrace);
			State = 106;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShaderDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PropertiesBlockContext propertiesBlock() {
			return GetRuleContext<PropertiesBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TagsBlockContext tagsBlock() {
			return GetRuleContext<TagsBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RenderStateDeclarationContext renderStateDeclaration() {
			return GetRuleContext<RenderStateDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HlslIncludeDeclarationContext hlslIncludeDeclaration() {
			return GetRuleContext<HlslIncludeDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PassBlockContext passBlock() {
			return GetRuleContext<PassBlockContext>(0);
		}
		public ShaderDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shaderDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShaderDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderDeclarationContext shaderDeclaration() {
		ShaderDeclarationContext _localctx = new ShaderDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_shaderDeclaration);
		try {
			State = 113;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 108;
				propertiesBlock();
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 2);
				{
				State = 109;
				tagsBlock();
				}
				break;
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
				EnterOuterAlt(_localctx, 3);
				{
				State = 110;
				renderStateDeclaration();
				}
				break;
			case HlslInclude:
				EnterOuterAlt(_localctx, 4);
				{
				State = 111;
				hlslIncludeDeclaration();
				}
				break;
			case T__2:
				EnterOuterAlt(_localctx, 5);
				{
				State = 112;
				passBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertiesBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftBrace() { return GetToken(ShaderLabParser.LeftBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightBrace() { return GetToken(ShaderLabParser.RightBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropertyDeclarationContext[] propertyDeclaration() {
			return GetRuleContexts<PropertyDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertyDeclarationContext propertyDeclaration(int i) {
			return GetRuleContext<PropertyDeclarationContext>(i);
		}
		public PropertiesBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertiesBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertiesBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertiesBlockContext propertiesBlock() {
		PropertiesBlockContext _localctx = new PropertiesBlockContext(Context, State);
		EnterRule(_localctx, 4, RULE_propertiesBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			Match(T__1);
			State = 116;
			Match(LeftBrace);
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==BracketLiteral || _la==Identifier) {
				{
				{
				State = 117;
				propertyDeclaration();
				}
				}
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 123;
			Match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PassBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftBrace() { return GetToken(ShaderLabParser.LeftBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightBrace() { return GetToken(ShaderLabParser.RightBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PassDeclarationContext[] passDeclaration() {
			return GetRuleContexts<PassDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PassDeclarationContext passDeclaration(int i) {
			return GetRuleContext<PassDeclarationContext>(i);
		}
		public PassBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_passBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPassBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PassBlockContext passBlock() {
		PassBlockContext _localctx = new PassBlockContext(Context, State);
		EnterRule(_localctx, 6, RULE_passBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125;
			Match(T__2);
			State = 126;
			Match(LeftBrace);
			State = 130;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2147549056L) != 0)) {
				{
				{
				State = 127;
				passDeclaration();
				}
				}
				State = 132;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 133;
			Match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PassDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NameDeclarationContext nameDeclaration() {
			return GetRuleContext<NameDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TagsBlockContext tagsBlock() {
			return GetRuleContext<TagsBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RenderStateDeclarationContext renderStateDeclaration() {
			return GetRuleContext<RenderStateDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HlslProgramDeclarationContext hlslProgramDeclaration() {
			return GetRuleContext<HlslProgramDeclarationContext>(0);
		}
		public PassDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_passDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPassDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PassDeclarationContext passDeclaration() {
		PassDeclarationContext _localctx = new PassDeclarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_passDeclaration);
		try {
			State = 139;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__6:
				EnterOuterAlt(_localctx, 1);
				{
				State = 135;
				nameDeclaration();
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 2);
				{
				State = 136;
				tagsBlock();
				}
				break;
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
				EnterOuterAlt(_localctx, 3);
				{
				State = 137;
				renderStateDeclaration();
				}
				break;
			case HlslProgram:
				EnterOuterAlt(_localctx, 4);
				{
				State = 138;
				hlslProgramDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AttributeDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BracketLiteral() { return GetToken(ShaderLabParser.BracketLiteral, 0); }
		public AttributeDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attributeDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAttributeDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AttributeDeclarationContext attributeDeclaration() {
		AttributeDeclarationContext _localctx = new AttributeDeclarationContext(Context, State);
		EnterRule(_localctx, 10, RULE_attributeDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			Match(BracketLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberLiteralExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IntegerLiteral() { return GetToken(ShaderLabParser.IntegerLiteral, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FloatLiteral() { return GetToken(ShaderLabParser.FloatLiteral, 0); }
		public NumberLiteralExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_numberLiteralExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumberLiteralExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
